feat: docker-compose e banco de dados mongodb

--- a/gamerank-backend/src/main/resources/application.properties
+++ b/gamerank-backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=gamerank-backend
+spring.data.mongodb.uri=mongodb://localhost:27017/gamerankdb
+spring.data.mongodb.database=gamerankdb
+
+# (opcional) mostrar queries no console
+spring.data.mongodb.auto-index-creation=true
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
