--- a/gamerank-backend/src/main/resources/application.properties
+++ b/gamerank-backend/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.data.mongodb.database=gamerankdb
 # (opcional) mostrar queries no console
 spring.data.mongodb.auto-index-creation=true
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+recommendation.service.url=http://localhost:5000
